# NanoTekSpice

./: .gitignore  CMakeLists.txt
.github/workflows/: nanotekspice.yml
include/: NanoTekSpice.hpp
src/: main.cpp
src/Components/: 4001Component.cpp  4001Component.hpp  AComponent.cpp  AComponent.hpp  AndComponent.cpp  AndComponent.hpp  ClockComponent.cpp  ClockComponent.hpp  Component4001.cpp  Component4001.hpp  Component4008.cpp  Component4008.hpp  Component4011.cpp  Component4011.hpp  Component4030.cpp  Component4030.hpp  Component4069.cpp  Component4069.hpp  Component4071.cpp  Component4071.hpp  Component4081.cpp  Component4081.hpp  Component4514.cpp  Component4514.hpp  FalseComponent.cpp  FalseComponent.hpp  InputComponent.cpp  InputComponent.hpp  LoggerComponent.cpp  LoggerComponent.hpp  NandComponent.cpp  NandComponent.hpp  NorComponent.cpp  NorComponent.hpp  NotComponent.cpp  NotComponent.hpp  OrComponent.cpp  OrComponent.hpp  OutputComponent.cpp  OutputComponent.hpp  (+4 more)
src/Components/Advanced/: Decoder.cpp  Decoder.hpp
src/Components/Elementary/: AndComponent.cpp  AndComponent.hpp  NotComponent.cpp  NotComponent.hpp  OrComponent.cpp  OrComponent.hpp  XorComponent.cpp  XorComponent.hpp
src/Components/Gates/: Component4001.cpp  Component4001.hpp  Component4011.cpp  Component4011.hpp  Component4030.cpp  Component4030.hpp  Component4069.cpp  Component4069.hpp  Component4071.cpp  Component4071.hpp  Component4081.cpp  Component4081.hpp
src/Core/: Core.cpp  Core.hpp
src/Factory/: Factory.cpp  Factory.hpp
src/Parser/: Parser.cpp  Parser.hpp
(+10 files in other folders)
